# AI_Research_Lab_Partner

./: .gitignore  README.md  config.py  db_migration.py  example_env.txt  main.py  pyproject.toml
auth/: jwt.py
compare/: graph.py  nodes.py  routes.py  state.py
db/: checkpointer.py  models.py
discovery/: client.py  routes.py  schemas.py
docs/: agent_interactions.md  api_reference.md  system_architecture.md
frontend/: env_example.txt  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInput.jsx  ChatWindow.jsx  Sidebar.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx
ingest/: captioning.py  document_parser.py  image_extraction.py  indexing_service.py  routes.py  semantic_chunking.py  table_extraction.py
models/: schemas.py
observability/: langfuse_client.py  security.py
query/: graph.py  handoff.py  manager_node.py  reflection_node.py  retrieval.py  routes.py  specialist_node.py  state.py
