[project]
name = "project-4-ai-research-lab-partner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.50.1",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
    "sqlalchemy==2.0.51",
    "langchain-core==1.4.8",
    "langgraph==1.2.7",
    "langgraph-checkpoint-postgres",
    "psycopg-binary",
    "pyjwt",
    "cryptography",
    "langfuse<3.0.0",
    "pymupdf==1.28.0",
    "llama-index==0.14.23",
    "llama-parse==0.6.94",
    "llama-index-llms-azure-openai==0.5.5",
    "llama-index-embeddings-azure-openai==0.5.2",
    "llama-index-vector-stores-postgres==0.8.1",
    "openai==2.44.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "arxiv>=1.4.8",
    "langchain-openai>=1.3.3",
]
